--- a/index.Rmd
+++ b/index.Rmd
@@ -259,9 +259,9 @@ We then used 'in situ evaluation' to test and evaluate both the template and pro
 
 \<which other template design papers have included evaluation criteria and rationale, Sophia's?\>
 
-Of primary concern was the structure and content of the preregistration template. Much like variable selection during model-building, the template should be 'parsimonious' - without the inclusion of any given item on the template, it would not adequately a) constrain researcher degrees of freedom and b) transparently document the decision-process of the modeller during model development. The template items were evaluated based on these criteria.
+Of primary concern was the structure and content of the preregistration template, however we also aimed to evaluate both the procedure and the interface for completing the preregistration. Much like variable selection during model-building, the template should be 'parsimonious' - without the inclusion of any given item on the template, it would not adequately a) constrain researcher degrees of freedom and b) transparently document the decision-process of the modeller during model development. Yet, with too many items, or with too high a resolution of the template items, the preregistration would be too difficult and time-consuming to complete.  We evaluated the template items based on these two criteria.
 
-Modellers \<here, here, and here\> have expressed concern about preregistration making modelling a more difficult task than it already is, and hampering the ability to meet project deadlines, especially in decision-problems. Many modellers already struggle with sufficiently documenting models during publication and reporting \<ref, model reporting and transparency review\>, and modellers working in government or other agencies have expressed concern that preregistration will simply add to the list of  'red-tape' expected of them. Given these concerns, and considering the concerns of many with regard to the iterative nature of model development precluding making preregistration impossible or inappropriate, we figured it was of utmost importance that the templates be evaluated on their ease-of-use and feasibility.
+Modellers \<here, here, and here\> have expressed concern about preregistration making modelling a more difficult task than it already is, and hampering the ability to meet project deadlines, especially in decision-problems. Many modellers already struggle with sufficiently documenting models during publication and reporting \<ref, model reporting and transparency review\>, and modellers working in government or other agencies have expressed concern that preregistration will simply add to the list of  'red-tape' expected of them. Given these concerns, and considering the concerns of many with regard to the iterative nature of model development precluding making preregistration impossible or inappropriate, we figured it was of utmost importance that the templates be also evaluated on their ease-of-use and feasibility.
 
    
 
@@ -271,13 +271,7 @@ Modellers \<here, here, and here\> have expressed concern about preregistration 
 
 We tested and evaluated the templates on the ability to meet these criteria by using a model-based research case-study \<see box\>.  Rather than 'digging back' through the version history of a completed preregistration to ask researchers about the process and how it had been developed in detail \<like Pu et al\>, we chose to leverage the version-control and collaborative project management features of GitHub \<cite\> as a tool for documenting both the analytic decisions of the researcher, and for using the preregistration process itself to 'live-develop' the template template. For example, if it turned out that we had missed an important item, or perhaps the phrasing of an item or the order and structure of the template needed to change whilst in the process of completing the preregistration, the suggested change, and its justification would be both recorded in GitHub and linked to the actual preregistration. Since *Pu et al* (p16). Found that the process of creating a preregistration is 'difficult to reconstruct with interview questions alone', we we aimed to capture the analysts 'thinking in the moment' by using comments and GitHub issues as to why a particular decision about the template item inclusion and specification should change. \<How we did this using GitHub:How to present this material? Link to the wiki issue and instructions to users?\> 
 
-Finally, we supplemented this 'in situ' testing and evaluation process with a semi-structured interviews in order to capture more detailed reflections of the analysts. This was because analysts were often under strict time-constraints, trying to meet their deliverables for the project. In addition, the process of preregistration was a new and unfamiliar task. 
-
-   
-
-\<WHAT DID WE EVALUATE\>
-
-NOT JUST THE TEMPLATES THEMSELVES BUT ALSO THE PROCEDURE, and the INTERFACE. I.e. bc *in situ evaluation is used to inform the design of a new* interface *- the shiny app...*
+Finally, we supplemented this 'in situ' testing and evaluation process with a semi-structured interviews in order to capture more detailed reflections of the analysts. This was because analysts were often under strict time-constraints, trying to meet their deliverables for the project. In addition, the process of preregistration was a new and unfamiliar task.
 
 \<TEXT HERE DESCRIBING THE ENVIRONMENTAL FLOWS MANAGEMENT PROBLEM + RESEARCH PROBLEM, to be completed by Chris / Lyndsey\>.
 
@@ -297,7 +291,7 @@ This will be a box or a table with numbered items, with just the preregistration
 
 
 
-Failing to make the 'internal model of preregistration' clear to users is a critical source of confusion among preregistration template users that may impede preregistration uptake, and undermine the ability of the template to achieve its objectives (Pu et al. 2020). Consequently, in this section we articulate the inner logic of preregistration the preregistration template that informs the the content, structure of the template, and our proposed procedure and interface for implementing the template.
+Failing to make the 'internal model of preregistration' clear to users is a critical source of confusion among preregistration template users that may impede preregistration uptake, and undermine the ability of the template to achieve its objectives (Pu et al. 2020). Consequently, in this section we articulate the inner logic of our preregistration templates that informs the the content, structure of the template, and our proposed procedure and interface for implementing the template.
 
 **Modelling workflows for Ecology and Conservation**
 
@@ -315,7 +309,7 @@ Table X, below, describes the 'model scientific workflow' underpinning the templ
 
    
 
-The iterative nature of model development was identified in our structured discussions as a key barrier to adopting preregistration. \<Insert refs to literature describing this\>.  \<Explain what I mean by iterative model development and provide examples\>
+During our structured discussions, we identified the iterative nature of model development as a key barrier to adopting preregistration. \<Insert refs to literature describing this\>.  \<Explain what I mean by iterative model development and provide examples\>
 
    
 
@@ -325,7 +319,7 @@ The iterative nature of model development was identified in our structured discu
 
    
 
-Typically, the process of preregistration is completely distinct from and precedes the implementation of the analysis plan laid out in the preregistration.	In fact, preregistration has been defined as "the action of confirming an unalterable version of one's research plan prior to collecting data" (Nosek et al. 2018) or prior to analysing the data (Ref, or link to secondary data preregistration template). This results in a linear research workflow, whereby a researcher shifts from the process of ideation and design, documentation of that design in a preregistration, to the process of action, where the researcher executes the plan specified in the preregistration \<insert link to this fig..\>
+Typically, the process of preregistration is completely distinct from and precedes the implementation of the analysis plan laid out in the preregistration. In fact, preregistration has been defined as "the action of confirming an unalterable version of one's research plan prior to collecting data" (Nosek et al. 2018) or prior to analysing the data (Ref, or link to secondary data preregistration template). This results in a linear research workflow, whereby a researcher shifts from the process of ideation and design, documentation of that design in a preregistration, to the process of action, where the researcher executes the plan specified in the preregistration \<insert link to this fig..\>
 
 Translating the preregistration process to a modelling research context is thus challenging because the iterative nature of model development conflicts with the inner logic of existing preregistration templates that presume a linear research workflow. For instance, some modelling decisions are inherently dependent on the outcomes and results of previous decisions and analyses, which involves conducting some preliminary or investigatory analyses before being able to specify future decision-steps in an analysis plan, contravening the critical(?adj) feature of preregistration of specifying the analysis plan prior to seeing the data. Moreover, some items in the template, particularly at later stages of modelling, might not be able to be answered by the researcher until the model is fully or close to fully specified on a first-pass (e.g. specifying exactly what sensitivity analyses or uncertainty analyses will be conducted). This might especially hold true for more complex process models. \<Mention that this is not a flaw in preregistration, but rather reflects the inner logic of preregistration for hypothesis-testing contexts\>
 
@@ -333,45 +327,46 @@ __The *checking* problem__
 
    
 
-The iterative nature of model construction and development complicates what is known as the preregistration *checking problem* even further. The process of checking a preregistered study involves comparing a manuscript to its preregistration, to verify that the study and analyses are conducted as specified in the preregistration Pu *et al.* Typically journal editors and reviewers might engage in checking, however, sometimes authors might too. Pu et al found that the authors engaged in a linear and thorough checking process, but reviewers on editors were not nearly "as exhaustive with checking". 
+Authors, reviewers, editors and readers may all engage in the process of checking a report or manuscript against its preregistration to verify that the study and analyses were conducted as specified in the preregistration. However, existing preregistration formats \<do not encourage/make the process of checking difficult\> --- static text-based documents are designed for authors to quickly input the desired information. In fact, *Pu et al* go so far as to say that this format "verge\[s\] on being write-only media" and are therefore completely ill-suited to the checking task. 
 
+The task of model checking is further complicated by the non-linear and iterative nature of model development. It is difficult to verify the conducted study and analysis against the preregistered analysis for existing preregistration formats used in hypothetico-deductive research . However, when the modelling and preregistration is iterative, such that there might be interim preregistrations, then this means that there are *multiple* versions of the preregistration to check against the completed analysis.
 
-
-The two main issues with checking are;  *And the 'checking problem' --- how do we evaluate studies that have used preregistrations, when should they be compared against their preregistration, and* 
-
-
-
-*to what detail should a reviewer or editor check the preregistration?*
-
-
+The question we faced then is, how do we design both the format of the template, and its procedure for completion by the author, so that we facilitate preregistration checking --- especially when this task is complicated by the iterative nature of model development? *Pu et al* put forth two design elements that may facilitate checking. They recommend designs that "make relevant preregistration easier to *query*" and that "encourage wider *coverage* of preregistration content during review".
 
    
 
-\- how to evaluate studies that have used preregistrations and when they should be compared against their preregistration\> 
-
-*How do we  facilitate checking? And the "checking problem"* "to what detail should or does an author or reviewer / editor check? 
-
-
-"Existing preregistration formats are designed primarily for authors to quickly input the desired information, but may verge on being write-only media: they are ill-suited to the checking task that reviewers, paper readers, and in some cases even authors themselves might perform. Thus, we recommend exploring designs that (1) make relevant preregistration content easier to *query* and (2) encourage wider *coverage* of preregistration content during review." Pu et al. 
+For *Pu et al.* The process of *querying* a preregistration consists of "paper-to-preregistration" and "preregistration-to-paper" lookup whereby the reader searches for relevant information from the paper in the preregistration and *vice-versa*. This requires that the report of paper must be specific in referring to parts of the preregistration, *and*, that the author has tagged the relevant part of the preregistration in their report or manuscript.
 
    
 
-   
-
-
-*The question we face in terms of designing the format of the template is, how do we facilitate checking?*
+Consequently we propose a methodology for managing the preregistration process that leverages features of GitHub that implement the task of linking the actual study and analysis that was conducted to the pre-specfied plan in the preregistration \<link to part of GH methodology that explains how checking is accounted for in the procedural design\>. In addition, we designed our shiny interface for completing the preregistration to include a 'checking mode' that easily allows the author to state how and why the the analysis might have diverged from the planned \<link to part of shiny app interface that discusses checking mode\>.
 
    
 
-How can we facilitate the process? They found that if the "paper is very specific to referring to parts of the preregistration" then this made it easier for reviewers and editors to check. Maybe we could do something else, rather than get the paper to refer to the parts of the preregistration (but I think we should do this with Chris anyway). If we propose the norm of using GitHub to create and check the preregistration., I think this could be a good way of getting around this checking problem. At the very end we have a 'how to box' targeted at authors. And then maybe we have a box targeted at reviewers? Not sure, maybe just focus this paper on authors and the process of creating and using a preregistration.
+---------
+
+*I'm not exactly sure whether this content should go here in a summarised form or whether it should go into its respective places coming up in the manuscript and we just link to it.* 
 
    
 
-In order to address this confusion among norms, I state the expected norms that the template has been designed around here. However, I don't expect users to agree on this process. Because we have kept the template in a GitHub repository that can be *forked*, people are free to adapt the template (the items themselves) to suit whatever norm they see fit about how preregistrations should be created and used.
+*How does our GH procedure incorporates checking:*
 
-   
+1\. Using issues to track committed work on the same analysis task, and that issue is spawned from a template item so the conducted work is inherently linked to that initial plan.
 
-\- how to evaluate studies that have used preregistrations and when they should be compared against their preregistration\> This process of "checking" a preregistered study is provisionally defined by Pu et al. as "comparing a manuscript to its preregistration and verifying that the study and the analyses are conducted as the preregistration has specified." Who engages in 'checking' a preregistration? "Authors, reviewers and editors may all engage in checking." *How do we  facilitate checking? And the "checking problem"* "to what detail should or does an author or reviewer / editor check? Pu et al found that the authors engaged in a linear and thorough checking process, but reviewers on editors were not nearly "as exhaustive with checking". How can we facilitate the process? They found that if the "paper is very specific to referring to parts of the preregistration" then this made it easier for reviewers and editors to check.
+2\. In the preregistration document 
+
+*How does our shiny-preregistration Interface incorporates checking:*
+
+\- Checking mode - The author can switch to checking mode after having conducted the analysis for a given PRT item. *Or* after the preregistration is complete. 
+
+What do you think about this process? What if we allowed check boxes in our preregistration software design so that the author could switch to 'checking mode' and they can tick some boxes Yes / No / Partial match. For No and Partial, they briefly describe \_how\_ it varies from the preregistration, and why (could link to the GitHub issue thread where conversation and decisions were logged during the process of conducting the analyses).
+
+This is going to take some further thought because there might be \_interim\_ versions of the document. Our process means that the author keeps adapting the preregistration until they actually go ahead and implement it... so doesn't this mean that they will \_always\_ follow their latest version of the preregistration?? I guess then checking entails a comparison of first and interim preregistrations against the actual conducted analysis, not just the final.
+
+AND it is possible that in other cases the author deviated from their plan for some reason, and didn't follow our proposed process using GH. So we want to allow for this to occur, but for the author to be able to state \_that\_ this happened, \_how\_ it differs, and why.
+
+---------
+
 
 ----
 
@@ -433,11 +428,11 @@ This process continues until the preregistration is complete, and the researcher
 
 When a researcher needs to conduct preliminary analyses or check parts of the data before committing to a particular decision about the model or analysis, they can specify a flexible strategy in their response to that preregistration item by:
 
-- stating what needs to be known to move forward with the modelling and analysis
+\- stating what needs to be known to move forward with the modelling and analysis
 
-- explaining how the researcher will test this, and what parts of the data will be used in that analysis
+\- explaining how the researcher will test this, and what parts of the data will be used in that analysis
 
-- describing how the results will be interpreted, listing each potential decision and the analysis result that will trigger that decision, where possible.
+\- describing how the results will be interpreted, listing each potential decision and the analysis result that will trigger that decision, where possible.
 
    
 
@@ -539,6 +534,10 @@ Hosting the preregistration template on GitHub, has the added benefit of providi
 
    
 
+In order to address this confusion among norms, I state the expected norms that the template has been designed around here. However, I don't expect users to agree on this process. Because we have kept the template in a GitHub repository that can be *forked*, people are free to adapt the template (the items themselves) to suit whatever norm they see fit about how preregistrations should be created and used.
+
+   
+
    
 
    
@@ -552,6 +551,7 @@ Hosting the preregistration template on GitHub, has the added benefit of providi
    
 
 Ask Chris to reflect on the preregistration process and whether this is true or not. I don't think it is true. I think the opposite is true. This "Punchcard" style analysis they describe is probably actually an artefact of the way statistical analyses are done in science these days - science is a sausage factory of p-values.  
+
 
 --------------------------
 # References
